Some older Sonar issues which are now recognised.